--- a/day16/Cargo.toml
+++ b/day16/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "day16"
+name = "day15"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+regex = "1"
+queues = "1.0.2"
